--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SohamMukherjee</title>
-    <link rel="stylesheet" href="/cv2/css/Styles.css">
+    <link rel="stylesheet" href="Styles.css">
     <link rel="shortcut icon" href="favi.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
